osl-2/src/main/antlr/OSLLocaleParser.g4
parser grammar OSLLocaleParser;
options { tokenVocab=OSLLocaleLexer; }

locale: LOCALE_DECLARATION (NL_SEPARATOR* localeLine)*;
localeLine: LOCALE_PROPERTY_NAME LOCALE_ASSIGNMENT (LOCALE_LINE_BREAK | LOCALE_ESCAPES | LOCALE_STRING_CHARACTERS)*? END_LOCALE_VALUE;
